countryLayer/force-app/main/default/objects/Country__c/fields/Regional_Blocs__c.field-meta.xml
<CustomField>
    <fullName>Regional_Blocs__c</fullName>
    <description>List of regional blocs the country belongs to.</description>
    <label>Regional Blocs</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>